# GenAIPractise

./: .gitignore  README.md  install_agent.sh  main.py  mcp.json  pyproject.toml
agent/: agent_cli.py  llm_client.py  llm_service.py  logger_config.py  mcp_manager.py  prompt_loader.py  video_evaluation.py  video_processor.py
agent/prompt/: tennis_evaluation_prompt.yaml
mcp_servers/: __init__.py  start_mcp_server.sh
mcp_servers/example_server/: __init__.py  server.py
